syntax = "proto3";

package quilibrium.node.data.pb;

option go_package = "source.quilibrium.com/quilibrium/monorepo/node/protobufs";

message ChallengeProofRequest {
  bytes challenge = 1;
  uint32 core = 2;
  uint32 increment = 3;
}

message ChallengeProofResponse {
  bytes output = 1;
}

service DataIPCService {
  rpc CalculateChallengeProof(ChallengeProofRequest) returns (ChallengeProofResponse);
}